home/styles/styles.css
@import 'https://fonts.googleapis.com/css?family=Muli:400, 700&display=swap';

* {
	margin: 0;
	padding: 0;
}

body {
	font-family: Muli, Arial, Helvetica, sans-serif;
}

header {
	display: flex;
	align-items: center;
	justify-content: flex-end;
	background-color: #465c69;
	height: 50px;
	border-bottom: 1px solid #e8f1f2;
}

nav {
	display: flex;
}

a {
	padding: 0 20px;
	color: #e27e5f;
	text-decoration: none;
	font-size: 30px;
	flex-grow: 1;
	transition: 0.3s color;
}

a.nav-link {
	position: relative;
}

a.nav-link:before {
	content: "";
	position: absolute;
	width: 100%;
	height: 2px;
	bottom: 0;
	left: 0;
	background-color: #e8f1f2;
	visibility: hidden;
	transform: scaleX(0);
	transition: all 0.3s ease-in-out;
}

a:hover {
	color: #8e9b90;
}

a.nav-link:hover:before {
	visibility: visible;
	transform: scaleX(0.75);
}

#jumbo {
	padding-top: 20px;
	display: flex;
	flex-direction: column;
	align-items: center;
	flex-wrap: wrap;
	height: 400px;
	background-color: #465c69;
}

h1 {
	padding: 20px;
	font-size: 9.2rem;
	color: #8e9b90;
	animation-name: grow;
	animation-duration: 1s;
}

h3 {
	padding-left: 20px;
	font-size: 3rem;
	color: #8e9b90;
	animation-name: slidein;
	animation-duration: 1s;
	transition-timing-function: ease-in-out;
}

h4.dark {
	font-size: 2.5rem;
	color: #465c69;
	padding: 20px;
}

h4.light {
	font-size: 2.5rem;
	color: #8e9b90;
	padding: 20px;
}

i {
	font-size: 5rem;
	padding: 20px;
	color: #8e9b90;
}

#slash {
	color: #e8f1f2;
}

#cloud {
	color: #e27e5f;
}

#about {
	padding: 20px;
	height: 500px;
	display: flex;
	font-weight: 700;
	text-align: center;
	justify-content: center;
	background-color: #e8f1f2;
	color: #2f2f2f;
}

#web-development {
	flex-grow: 1;
}

#mobile {
	flex-grow: 1;
}

#projects {
	height: 500px;
	background-color: #465c69;
}

footer {
	padding-top: 10px;
	height: 50px;
	background-color: #465c69;
	display: flex;
	justify-content: center;
}

.fadein {
	animation-name: fadein;
	animation-duration: 2.5s;
}

.orange-to-green {
	padding: 0 20px;
	color: #e27e5f;
	text-decoration: none;
	font-size: 30px;
	flex-grow: 1;
	transition: 0.3s color;
}

@keyframes fadein {
	from {
		opacity: 0;
	}
	to {
		opacity: 100;
	}
}

@keyframes slidein {
	0% {
		transform: translate(0, 250%);
	}
	40% {
		transform: translate(0, -100%);
	}
	100% {
		transform: translate(0, 0%);
	}
}

@keyframes grow {
	from {
		transform: scale(0);
	}
	to {
		transform: scale(1);
	}
}

@media all and (max-width: 950px) {
	#jumbo {
		align-items: flex-start;
		height: 350px;
	}
	header {
		justify-content: space-around;
	}
	h1 {
		font-size: 6rem;
	}
	h3 {
		font-size: 3rem;
	}
	#about {
		flex-direction: column;
	}
}

@media all and (max-width: 750px) {
	#profile {
		width: 300px;
	}
	h1 {
		font-size: 4.5rem;
	}
	h3 {
		font-size: 2rem;
	}
	#jumbo {
		padding-top: 10px;
		height: 250px;
	}
}

